import { describe, it, jest, beforeEach } from '@jest/globals';

import {
  mockDialogAPI,
  mockScrollIntoView,
  render,
} from '../../../testing/testing';

import { TransactionTemplate } from './TransactionTemplate';

const localeCost = 'EUR 4.00';

const actions = {
  handleTermsClick: jest.fn(),
  handleBindClick: jest.fn(),
  handleRestart: jest.fn(),
};

function MockPayPalButton() {
  return <button>PayPal</button>;
}

describe('TransactionTemplate', () => {
  beforeEach(() => {
    mockDialogAPI();
    mockScrollIntoView();
  });

  it('should match snapshot with status=prepared', () => {
    const { container } = render(
      <TransactionTemplate
        status="prepared"
        enabled={false}
        bound={false}
        cost={localeCost}
        {...actions}
      >
        <MockPayPalButton />
      </TransactionTemplate>,
    );

    expect(container).toMatchSnapshot();
  });

  it('should match snapshot with terms accepted', () => {
    const { container } = render(
      <TransactionTemplate
        status="prepared"
        enabled={true}
        bound={false}
        cost={localeCost}
        {...actions}
      >
        <MockPayPalButton />
      </TransactionTemplate>,
    );

    expect(container).toMatchSnapshot();
  });

  it('should match snapshot with status=authorizing', () => {
    const { container } = render(
      <TransactionTemplate
        status="authorizing"
        enabled={true}
        bound={true}
        cost={localeCost}
        {...actions}
      >
        <MockPayPalButton />
      </TransactionTemplate>,
    );

    expect(container).toMatchSnapshot();
  });

  it('should match snapshot with status=submitting', () => {
    const { container } = render(
      <TransactionTemplate
        status="submitting"
        enabled={true}
        bound={true}
        cost={localeCost}
        {...actions}
      >
        <MockPayPalButton />
      </TransactionTemplate>,
    );

    expect(container).toMatchSnapshot();
  });

  it('should match snapshot with status=complete', () => {
    const { container } = render(
      <TransactionTemplate
        status="complete"
        enabled={true}
        bound={true}
        cost={localeCost}
        {...actions}
      >
        <MockPayPalButton />
      </TransactionTemplate>,
    );

    expect(container).toMatchSnapshot();
  });

  it('should match snapshot with flowError=paypal', () => {
    const { container } = render(
      <TransactionTemplate
        status="error"
        flowError="paypal"
        enabled={true}
        bound={true}
        cost={localeCost}
        {...actions}
      >
        <MockPayPalButton />
      </TransactionTemplate>,
    );

    expect(container).toMatchSnapshot();
  });

  it('should match snapshot with flowError=txd', () => {
    const { container } = render(
      <TransactionTemplate
        status="error"
        flowError="txd"
        enabled={true}
        bound={true}
        cost={localeCost}
        {...actions}
      >
        <MockPayPalButton />
      </TransactionTemplate>,
    );

    expect(container).toMatchSnapshot();
  });

  it('should match snapshot with flowError=unknown', () => {
    const { container } = render(
      <TransactionTemplate
        status="error"
        flowError="unknown"
        enabled={true}
        bound={true}
        cost={localeCost}
        {...actions}
      >
        <MockPayPalButton />
      </TransactionTemplate>,
    );

    expect(container).toMatchSnapshot();
  });
});
