// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TransactionTemplate should match snapshot with flowError=paypal 1`] = `
<div>
  <form
    class="container"
  >
    <ul
      class="container"
    >
      <li
        class="completed"
      >
        Prepare
      </li>
      <li
        class="completed"
      >
        Order
      </li>
      <li
        class="current"
      >
        Pay
      </li>
      <li
        class="step"
      >
        Success
      </li>
    </ul>
    <h2
      class="heading"
    >
      Purchase Process
    </h2>
    <p
      class="txError"
    >
      Error
    </p>
    <p>
      Something went wrong during your PayPal payment. Your account was not debited.
    </p>
    <p>
      Please restart the payment process.
    </p>
    <button
      class="restart"
    >
      Restart
    </button>
    <dialog
      class="dialog"
    >
      Please wait while your transaction is being processed
    </dialog>
  </form>
</div>
`;

exports[`TransactionTemplate should match snapshot with flowError=txd 1`] = `
<div>
  <form
    class="container"
  >
    <ul
      class="container"
    >
      <li
        class="completed"
      >
        Prepare
      </li>
      <li
        class="completed"
      >
        Order
      </li>
      <li
        class="current"
      >
        Pay
      </li>
      <li
        class="step"
      >
        Success
      </li>
    </ul>
    <h2
      class="heading"
    >
      Purchase Process
    </h2>
    <p
      class="txError"
    >
      Error
    </p>
    <p>
      Something went wrong during the blockchain transaction. Your account was not debited.
    </p>
    <p>
      Please restart the payment process.
    </p>
    <button
      class="restart"
    >
      Restart
    </button>
    <dialog
      class="dialog"
    >
      Please wait while your transaction is being processed
    </dialog>
  </form>
</div>
`;

exports[`TransactionTemplate should match snapshot with flowError=unknown 1`] = `
<div>
  <form
    class="container"
  >
    <ul
      class="container"
    >
      <li
        class="completed"
      >
        Prepare
      </li>
      <li
        class="completed"
      >
        Order
      </li>
      <li
        class="current"
      >
        Pay
      </li>
      <li
        class="step"
      >
        Success
      </li>
    </ul>
    <h2
      class="heading"
    >
      Purchase Process
    </h2>
    <p
      class="txError"
    >
      Error
    </p>
    <p>
      Some unexpected error happened.
    </p>
    <p>
      It’s possible that the transaction was still successful. Please wait a moment before checking your Sporran wallet and PayPal balance. After you have confirmed that your account does not have a DID and your payment method was not charged, please check your internet connection and try again.
    </p>
    <button
      class="restart"
    >
      Restart
    </button>
    <dialog
      class="dialog"
    >
      Please wait while your transaction is being processed
    </dialog>
  </form>
</div>
`;

exports[`TransactionTemplate should match snapshot with status=authorizing 1`] = `
<div>
  <form
    class="container"
  >
    <ul
      class="container"
    >
      <li
        class="completed"
      >
        Prepare
      </li>
      <li
        class="completed"
      >
        Order
      </li>
      <li
        class="current"
      >
        Pay
      </li>
      <li
        class="step"
      >
        Success
      </li>
    </ul>
    <h2
      class="heading"
    >
      Purchase Process
    </h2>
    <p
      class="txPrepared"
    >
      Sporran transaction signed
    </p>
    <section
      class="addressContainer"
    >
      <div
        class="pending"
      >
        <svg
          class="identicon"
          height="64"
          viewBox="0 0 64 64"
          width="64"
        >
          <circle
            cx="32"
            cy="32"
            fill="#eee"
            r="32"
          />
          <circle
            cx="32"
            cy="8"
            fill="hsl(50, 56%, 75%)"
            r="5"
          />
          <circle
            cx="32"
            cy="20"
            fill="hsl(118, 56%, 53%)"
            r="5"
          />
          <circle
            cx="21.607695154586736"
            cy="14"
            fill="hsl(61, 56%, 75%)"
            r="5"
          />
          <circle
            cx="11.215390309173472"
            cy="20"
            fill="hsl(174, 56%, 35%)"
            r="5"
          />
          <circle
            cx="21.607695154586736"
            cy="26"
            fill="hsl(39, 56%, 35%)"
            r="5"
          />
          <circle
            cx="11.215390309173472"
            cy="32"
            fill="hsl(61, 56%, 75%)"
            r="5"
          />
          <circle
            cx="11.215390309173472"
            cy="44"
            fill="hsl(50, 56%, 75%)"
            r="5"
          />
          <circle
            cx="21.607695154586736"
            cy="38"
            fill="hsl(118, 56%, 53%)"
            r="5"
          />
          <circle
            cx="21.607695154586736"
            cy="50"
            fill="hsl(315, 56%, 75%)"
            r="5"
          />
          <circle
            cx="32"
            cy="56"
            fill="hsl(33, 56%, 35%)"
            r="5"
          />
          <circle
            cx="32"
            cy="44"
            fill="hsl(298, 56%, 15%)"
            r="5"
          />
          <circle
            cx="42.392304845413264"
            cy="50"
            fill="hsl(185, 56%, 35%)"
            r="5"
          />
          <circle
            cx="52.78460969082653"
            cy="44"
            fill="hsl(236, 56%, 35%)"
            r="5"
          />
          <circle
            cx="42.392304845413264"
            cy="38"
            fill="hsl(202, 56%, 75%)"
            r="5"
          />
          <circle
            cx="52.78460969082653"
            cy="32"
            fill="hsl(185, 56%, 35%)"
            r="5"
          />
          <circle
            cx="52.78460969082653"
            cy="20"
            fill="hsl(33, 56%, 35%)"
            r="5"
          />
          <circle
            cx="42.392304845413264"
            cy="26"
            fill="hsl(298, 56%, 15%)"
            r="5"
          />
          <circle
            cx="42.392304845413264"
            cy="14"
            fill="hsl(315, 56%, 75%)"
            r="5"
          />
          <circle
            cx="32"
            cy="32"
            fill="hsl(90, 56%, 35%)"
            r="5"
          />
        </svg>
      </div>
      <p
        class="address"
      >
        <span
          class="addressName"
        >
          For account address:
        </span>
        <span
          class="addressValue"
        >
          4rjRmamwCipCeLpVGSrwtWoWCu53FXXf6S7f6DYJX6k644ML
        </span>
      </p>
    </section>
    <section
      class="incomplete"
    >
      <p
        class="instruction"
      >
        The Checkout Service executes your transaction for a DID on the KILT blockchain. This Service is provided by KILT partner B.T.E. BOTLabs Trusted Entity GmbH. You can use PayPal to pay for this service.
      </p>
      <p
        class="termsLineEnabled"
      >
        <label
          class="termsLabel"
        >
          <input
            checked=""
            class="accept"
            type="checkbox"
          />
          <span
            class="checkbox"
          />
          <span
            class="termsLabelText"
          >
            I agree to immediate processing of the Checkout Service, and am aware that this ends my right to revoke the Service.
          </span>
        </label>
      </p>
      <p
        class="cost"
      >
        <span>
          Service fee
        </span>
        <span
          class="costValue"
        >
          EUR 4.00
        </span>
        <span
          class="costDetails"
        >
          or EUR equivalent, depending on your preferred PayPal currency
        </span>
      </p>
      <p
        class="instruction"
      >
        By clicking the button below, I also agree to the
         
        <a
          class="termsLink"
          href="/terms.html"
        >
          Terms and Conditions
        </a>
         
        of the Checkout Service and to start the payment via Paypal.
      </p>
      <p
        class="orderLine"
      >
        <button
          class="order"
          disabled=""
          type="submit"
        >
          Chargeable order
        </button>
      </p>
      <button>
        PayPal
      </button>
    </section>
    <dialog
      class="dialog"
      open=""
    >
      Please wait while your transaction is being processed
    </dialog>
  </form>
</div>
`;

exports[`TransactionTemplate should match snapshot with status=complete 1`] = `
<div>
  <form
    class="container"
  >
    <ul
      class="container"
    >
      <li
        class="completed"
      >
        Prepare
      </li>
      <li
        class="completed"
      >
        Order
      </li>
      <li
        class="completed"
      >
        Pay
      </li>
      <li
        class="current"
      >
        Success
      </li>
    </ul>
    <h2
      class="heading"
    >
      Purchase Process
    </h2>
    <p
      class="txComplete"
    >
      Order complete
    </p>
    <section
      class="addressContainer"
    >
      <div
        class="avatar"
      >
        <svg
          class="identicon"
          height="64"
          viewBox="0 0 64 64"
          width="64"
        >
          <circle
            cx="32"
            cy="32"
            fill="#eee"
            r="32"
          />
          <circle
            cx="32"
            cy="8"
            fill="hsl(50, 56%, 75%)"
            r="5"
          />
          <circle
            cx="32"
            cy="20"
            fill="hsl(118, 56%, 53%)"
            r="5"
          />
          <circle
            cx="21.607695154586736"
            cy="14"
            fill="hsl(61, 56%, 75%)"
            r="5"
          />
          <circle
            cx="11.215390309173472"
            cy="20"
            fill="hsl(174, 56%, 35%)"
            r="5"
          />
          <circle
            cx="21.607695154586736"
            cy="26"
            fill="hsl(39, 56%, 35%)"
            r="5"
          />
          <circle
            cx="11.215390309173472"
            cy="32"
            fill="hsl(61, 56%, 75%)"
            r="5"
          />
          <circle
            cx="11.215390309173472"
            cy="44"
            fill="hsl(50, 56%, 75%)"
            r="5"
          />
          <circle
            cx="21.607695154586736"
            cy="38"
            fill="hsl(118, 56%, 53%)"
            r="5"
          />
          <circle
            cx="21.607695154586736"
            cy="50"
            fill="hsl(315, 56%, 75%)"
            r="5"
          />
          <circle
            cx="32"
            cy="56"
            fill="hsl(33, 56%, 35%)"
            r="5"
          />
          <circle
            cx="32"
            cy="44"
            fill="hsl(298, 56%, 15%)"
            r="5"
          />
          <circle
            cx="42.392304845413264"
            cy="50"
            fill="hsl(185, 56%, 35%)"
            r="5"
          />
          <circle
            cx="52.78460969082653"
            cy="44"
            fill="hsl(236, 56%, 35%)"
            r="5"
          />
          <circle
            cx="42.392304845413264"
            cy="38"
            fill="hsl(202, 56%, 75%)"
            r="5"
          />
          <circle
            cx="52.78460969082653"
            cy="32"
            fill="hsl(185, 56%, 35%)"
            r="5"
          />
          <circle
            cx="52.78460969082653"
            cy="20"
            fill="hsl(33, 56%, 35%)"
            r="5"
          />
          <circle
            cx="42.392304845413264"
            cy="26"
            fill="hsl(298, 56%, 15%)"
            r="5"
          />
          <circle
            cx="42.392304845413264"
            cy="14"
            fill="hsl(315, 56%, 75%)"
            r="5"
          />
          <circle
            cx="32"
            cy="32"
            fill="hsl(90, 56%, 35%)"
            r="5"
          />
        </svg>
      </div>
      <p
        class="address"
      >
        <span
          class="addressName"
        >
          For account address:
        </span>
        <span
          class="addressValue"
        >
          4rjRmamwCipCeLpVGSrwtWoWCu53FXXf6S7f6DYJX6k644ML
        </span>
      </p>
    </section>
    <h2
      class="servicesHeading"
    >
      Congratulations! Now you can start building and using your digital identity with KILT services:
    </h2>
    <ul
      class="services"
    >
      <li>
        Give your DID a custom name using
         
        <a
          class="serviceLink"
          href="https://w3n.id/"
        >
          web3name
        </a>
      </li>
      <li>
        Add credentials to your DID such as social media accounts, GitHub and email address using
         
        <a
          class="serviceLink"
          href="https://socialkyc.io/"
        >
          SocialKYC
        </a>
      </li>
      <li>
        Sign digital files with your DID in a secure, decentralized way using
         
        <a
          class="serviceLink"
          href="https://didsign.io/"
        >
          DIDsign
        </a>
      </li>
      <li>
        Link your DID to your Polkadot ecosystem addresses (and soon, Ethereum)
      </li>
    </ul>
    <dialog
      class="dialog"
    >
      Please wait while your transaction is being processed
    </dialog>
  </form>
</div>
`;

exports[`TransactionTemplate should match snapshot with status=prepared 1`] = `
<div>
  <form
    class="container"
  >
    <ul
      class="container"
    >
      <li
        class="current"
      >
        Prepare
      </li>
      <li
        class="step"
      >
        Order
      </li>
      <li
        class="step"
      >
        Pay
      </li>
      <li
        class="step"
      >
        Success
      </li>
    </ul>
    <h2
      class="heading"
    >
      Purchase Process
    </h2>
    <p
      class="txPrepared"
    >
      Sporran transaction signed
    </p>
    <section
      class="addressContainer"
    >
      <div
        class="pending"
      >
        <svg
          class="identicon"
          height="64"
          viewBox="0 0 64 64"
          width="64"
        >
          <circle
            cx="32"
            cy="32"
            fill="#eee"
            r="32"
          />
          <circle
            cx="32"
            cy="8"
            fill="hsl(50, 56%, 75%)"
            r="5"
          />
          <circle
            cx="32"
            cy="20"
            fill="hsl(118, 56%, 53%)"
            r="5"
          />
          <circle
            cx="21.607695154586736"
            cy="14"
            fill="hsl(61, 56%, 75%)"
            r="5"
          />
          <circle
            cx="11.215390309173472"
            cy="20"
            fill="hsl(174, 56%, 35%)"
            r="5"
          />
          <circle
            cx="21.607695154586736"
            cy="26"
            fill="hsl(39, 56%, 35%)"
            r="5"
          />
          <circle
            cx="11.215390309173472"
            cy="32"
            fill="hsl(61, 56%, 75%)"
            r="5"
          />
          <circle
            cx="11.215390309173472"
            cy="44"
            fill="hsl(50, 56%, 75%)"
            r="5"
          />
          <circle
            cx="21.607695154586736"
            cy="38"
            fill="hsl(118, 56%, 53%)"
            r="5"
          />
          <circle
            cx="21.607695154586736"
            cy="50"
            fill="hsl(315, 56%, 75%)"
            r="5"
          />
          <circle
            cx="32"
            cy="56"
            fill="hsl(33, 56%, 35%)"
            r="5"
          />
          <circle
            cx="32"
            cy="44"
            fill="hsl(298, 56%, 15%)"
            r="5"
          />
          <circle
            cx="42.392304845413264"
            cy="50"
            fill="hsl(185, 56%, 35%)"
            r="5"
          />
          <circle
            cx="52.78460969082653"
            cy="44"
            fill="hsl(236, 56%, 35%)"
            r="5"
          />
          <circle
            cx="42.392304845413264"
            cy="38"
            fill="hsl(202, 56%, 75%)"
            r="5"
          />
          <circle
            cx="52.78460969082653"
            cy="32"
            fill="hsl(185, 56%, 35%)"
            r="5"
          />
          <circle
            cx="52.78460969082653"
            cy="20"
            fill="hsl(33, 56%, 35%)"
            r="5"
          />
          <circle
            cx="42.392304845413264"
            cy="26"
            fill="hsl(298, 56%, 15%)"
            r="5"
          />
          <circle
            cx="42.392304845413264"
            cy="14"
            fill="hsl(315, 56%, 75%)"
            r="5"
          />
          <circle
            cx="32"
            cy="32"
            fill="hsl(90, 56%, 35%)"
            r="5"
          />
        </svg>
      </div>
      <p
        class="address"
      >
        <span
          class="addressName"
        >
          For account address:
        </span>
        <span
          class="addressValue"
        >
          4rjRmamwCipCeLpVGSrwtWoWCu53FXXf6S7f6DYJX6k644ML
        </span>
      </p>
    </section>
    <section
      class="incomplete"
    >
      <p
        class="instruction"
      >
        The Checkout Service executes your transaction for a DID on the KILT blockchain. This Service is provided by KILT partner B.T.E. BOTLabs Trusted Entity GmbH. You can use PayPal to pay for this service.
      </p>
      <p
        class="termsLine"
      >
        <label
          class="termsLabel"
        >
          <input
            class="accept"
            type="checkbox"
          />
          <span
            class="checkbox"
          />
          <span
            class="termsLabelText"
          >
            I agree to immediate processing of the Checkout Service, and am aware that this ends my right to revoke the Service.
          </span>
        </label>
      </p>
      <p
        class="cost"
      >
        <span>
          Service fee
        </span>
        <span
          class="costValue"
        >
          EUR 4.00
        </span>
        <span
          class="costDetails"
        >
          or EUR equivalent, depending on your preferred PayPal currency
        </span>
      </p>
      <p
        class="instruction"
      >
        By clicking the button below, I also agree to the
         
        <a
          class="termsLink"
          href="/terms.html"
        >
          Terms and Conditions
        </a>
         
        of the Checkout Service and to start the payment via Paypal.
      </p>
      <p
        class="orderLine"
      >
        <button
          class="order"
          disabled=""
          type="submit"
        >
          Chargeable order
        </button>
      </p>
      <button>
        PayPal
      </button>
    </section>
    <dialog
      class="dialog"
    >
      Please wait while your transaction is being processed
    </dialog>
  </form>
</div>
`;

exports[`TransactionTemplate should match snapshot with status=submitting 1`] = `
<div>
  <form
    class="container"
  >
    <ul
      class="container"
    >
      <li
        class="completed"
      >
        Prepare
      </li>
      <li
        class="completed"
      >
        Order
      </li>
      <li
        class="current"
      >
        Pay
      </li>
      <li
        class="step"
      >
        Success
      </li>
    </ul>
    <h2
      class="heading"
    >
      Purchase Process
    </h2>
    <p
      class="txPrepared"
    >
      Sporran transaction signed
    </p>
    <section
      class="addressContainer"
    >
      <div
        class="pending"
      >
        <svg
          class="identicon"
          height="64"
          viewBox="0 0 64 64"
          width="64"
        >
          <circle
            cx="32"
            cy="32"
            fill="#eee"
            r="32"
          />
          <circle
            cx="32"
            cy="8"
            fill="hsl(50, 56%, 75%)"
            r="5"
          />
          <circle
            cx="32"
            cy="20"
            fill="hsl(118, 56%, 53%)"
            r="5"
          />
          <circle
            cx="21.607695154586736"
            cy="14"
            fill="hsl(61, 56%, 75%)"
            r="5"
          />
          <circle
            cx="11.215390309173472"
            cy="20"
            fill="hsl(174, 56%, 35%)"
            r="5"
          />
          <circle
            cx="21.607695154586736"
            cy="26"
            fill="hsl(39, 56%, 35%)"
            r="5"
          />
          <circle
            cx="11.215390309173472"
            cy="32"
            fill="hsl(61, 56%, 75%)"
            r="5"
          />
          <circle
            cx="11.215390309173472"
            cy="44"
            fill="hsl(50, 56%, 75%)"
            r="5"
          />
          <circle
            cx="21.607695154586736"
            cy="38"
            fill="hsl(118, 56%, 53%)"
            r="5"
          />
          <circle
            cx="21.607695154586736"
            cy="50"
            fill="hsl(315, 56%, 75%)"
            r="5"
          />
          <circle
            cx="32"
            cy="56"
            fill="hsl(33, 56%, 35%)"
            r="5"
          />
          <circle
            cx="32"
            cy="44"
            fill="hsl(298, 56%, 15%)"
            r="5"
          />
          <circle
            cx="42.392304845413264"
            cy="50"
            fill="hsl(185, 56%, 35%)"
            r="5"
          />
          <circle
            cx="52.78460969082653"
            cy="44"
            fill="hsl(236, 56%, 35%)"
            r="5"
          />
          <circle
            cx="42.392304845413264"
            cy="38"
            fill="hsl(202, 56%, 75%)"
            r="5"
          />
          <circle
            cx="52.78460969082653"
            cy="32"
            fill="hsl(185, 56%, 35%)"
            r="5"
          />
          <circle
            cx="52.78460969082653"
            cy="20"
            fill="hsl(33, 56%, 35%)"
            r="5"
          />
          <circle
            cx="42.392304845413264"
            cy="26"
            fill="hsl(298, 56%, 15%)"
            r="5"
          />
          <circle
            cx="42.392304845413264"
            cy="14"
            fill="hsl(315, 56%, 75%)"
            r="5"
          />
          <circle
            cx="32"
            cy="32"
            fill="hsl(90, 56%, 35%)"
            r="5"
          />
        </svg>
      </div>
      <p
        class="address"
      >
        <span
          class="addressName"
        >
          For account address:
        </span>
        <span
          class="addressValue"
        >
          4rjRmamwCipCeLpVGSrwtWoWCu53FXXf6S7f6DYJX6k644ML
        </span>
      </p>
    </section>
    <section
      class="incomplete"
    >
      <p
        class="instruction"
      >
        The Checkout Service executes your transaction for a DID on the KILT blockchain. This Service is provided by KILT partner B.T.E. BOTLabs Trusted Entity GmbH. You can use PayPal to pay for this service.
      </p>
      <p
        class="termsLineEnabled"
      >
        <label
          class="termsLabel"
        >
          <input
            checked=""
            class="accept"
            type="checkbox"
          />
          <span
            class="checkbox"
          />
          <span
            class="termsLabelText"
          >
            I agree to immediate processing of the Checkout Service, and am aware that this ends my right to revoke the Service.
          </span>
        </label>
      </p>
      <p
        class="cost"
      >
        <span>
          Service fee
        </span>
        <span
          class="costValue"
        >
          EUR 4.00
        </span>
        <span
          class="costDetails"
        >
          or EUR equivalent, depending on your preferred PayPal currency
        </span>
      </p>
      <p
        class="instruction"
      >
        By clicking the button below, I also agree to the
         
        <a
          class="termsLink"
          href="/terms.html"
        >
          Terms and Conditions
        </a>
         
        of the Checkout Service and to start the payment via Paypal.
      </p>
      <p
        class="orderLine"
      >
        <button
          class="order"
          disabled=""
          type="submit"
        >
          Chargeable order
        </button>
      </p>
      <button>
        PayPal
      </button>
    </section>
    <dialog
      class="dialog"
      open=""
    >
      Please wait while your transaction is being processed
    </dialog>
  </form>
</div>
`;

exports[`TransactionTemplate should match snapshot with terms accepted 1`] = `
<div>
  <form
    class="container"
  >
    <ul
      class="container"
    >
      <li
        class="completed"
      >
        Prepare
      </li>
      <li
        class="current"
      >
        Order
      </li>
      <li
        class="step"
      >
        Pay
      </li>
      <li
        class="step"
      >
        Success
      </li>
    </ul>
    <h2
      class="heading"
    >
      Purchase Process
    </h2>
    <p
      class="txPrepared"
    >
      Sporran transaction signed
    </p>
    <section
      class="addressContainer"
    >
      <div
        class="pending"
      >
        <svg
          class="identicon"
          height="64"
          viewBox="0 0 64 64"
          width="64"
        >
          <circle
            cx="32"
            cy="32"
            fill="#eee"
            r="32"
          />
          <circle
            cx="32"
            cy="8"
            fill="hsl(50, 56%, 75%)"
            r="5"
          />
          <circle
            cx="32"
            cy="20"
            fill="hsl(118, 56%, 53%)"
            r="5"
          />
          <circle
            cx="21.607695154586736"
            cy="14"
            fill="hsl(61, 56%, 75%)"
            r="5"
          />
          <circle
            cx="11.215390309173472"
            cy="20"
            fill="hsl(174, 56%, 35%)"
            r="5"
          />
          <circle
            cx="21.607695154586736"
            cy="26"
            fill="hsl(39, 56%, 35%)"
            r="5"
          />
          <circle
            cx="11.215390309173472"
            cy="32"
            fill="hsl(61, 56%, 75%)"
            r="5"
          />
          <circle
            cx="11.215390309173472"
            cy="44"
            fill="hsl(50, 56%, 75%)"
            r="5"
          />
          <circle
            cx="21.607695154586736"
            cy="38"
            fill="hsl(118, 56%, 53%)"
            r="5"
          />
          <circle
            cx="21.607695154586736"
            cy="50"
            fill="hsl(315, 56%, 75%)"
            r="5"
          />
          <circle
            cx="32"
            cy="56"
            fill="hsl(33, 56%, 35%)"
            r="5"
          />
          <circle
            cx="32"
            cy="44"
            fill="hsl(298, 56%, 15%)"
            r="5"
          />
          <circle
            cx="42.392304845413264"
            cy="50"
            fill="hsl(185, 56%, 35%)"
            r="5"
          />
          <circle
            cx="52.78460969082653"
            cy="44"
            fill="hsl(236, 56%, 35%)"
            r="5"
          />
          <circle
            cx="42.392304845413264"
            cy="38"
            fill="hsl(202, 56%, 75%)"
            r="5"
          />
          <circle
            cx="52.78460969082653"
            cy="32"
            fill="hsl(185, 56%, 35%)"
            r="5"
          />
          <circle
            cx="52.78460969082653"
            cy="20"
            fill="hsl(33, 56%, 35%)"
            r="5"
          />
          <circle
            cx="42.392304845413264"
            cy="26"
            fill="hsl(298, 56%, 15%)"
            r="5"
          />
          <circle
            cx="42.392304845413264"
            cy="14"
            fill="hsl(315, 56%, 75%)"
            r="5"
          />
          <circle
            cx="32"
            cy="32"
            fill="hsl(90, 56%, 35%)"
            r="5"
          />
        </svg>
      </div>
      <p
        class="address"
      >
        <span
          class="addressName"
        >
          For account address:
        </span>
        <span
          class="addressValue"
        >
          4rjRmamwCipCeLpVGSrwtWoWCu53FXXf6S7f6DYJX6k644ML
        </span>
      </p>
    </section>
    <section
      class="incomplete"
    >
      <p
        class="instruction"
      >
        The Checkout Service executes your transaction for a DID on the KILT blockchain. This Service is provided by KILT partner B.T.E. BOTLabs Trusted Entity GmbH. You can use PayPal to pay for this service.
      </p>
      <p
        class="termsLineEnabled"
      >
        <label
          class="termsLabel"
        >
          <input
            checked=""
            class="accept"
            type="checkbox"
          />
          <span
            class="checkbox"
          />
          <span
            class="termsLabelText"
          >
            I agree to immediate processing of the Checkout Service, and am aware that this ends my right to revoke the Service.
          </span>
        </label>
      </p>
      <p
        class="cost"
      >
        <span>
          Service fee
        </span>
        <span
          class="costValue"
        >
          EUR 4.00
        </span>
        <span
          class="costDetails"
        >
          or EUR equivalent, depending on your preferred PayPal currency
        </span>
      </p>
      <p
        class="instruction"
      >
        By clicking the button below, I also agree to the
         
        <a
          class="termsLink"
          href="/terms.html"
        >
          Terms and Conditions
        </a>
         
        of the Checkout Service and to start the payment via Paypal.
      </p>
      <p
        class="orderLine"
      >
        <button
          class="order"
          type="submit"
        >
          Chargeable order
        </button>
      </p>
      <button>
        PayPal
      </button>
    </section>
    <dialog
      class="dialog"
    >
      Please wait while your transaction is being processed
    </dialog>
  </form>
</div>
`;
